design-principles-02/src/main/java/com/farhad/example/design_principles02/tda/bad/CpuMonitor.java
package com.farhad.example.design_principles02.tda.bad;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class CpuMonitor {

	private int value;
}
